adding flag, adding support for multiple turns