@@ -1,9 +1,13 @@
 package com.kentwentyfour.project12.presentation.controllers;
 
-import com.kentwentyfour.project12.Bots.*;
+import com.kentwentyfour.project12.bots.BotHillClimbing;
+import com.kentwentyfour.project12.bots.BasicBot;
+import com.kentwentyfour.project12.bots.BotPlayer;
+import com.kentwentyfour.project12.bots.MultipleTurnBot;
+import com.kentwentyfour.project12.bots.improvedbot.MazeBot;
+import com.kentwentyfour.project12.bots.improvedbot.resources.Waypoint;
 import com.kentwentyfour.project12.gameobjects.movableobjects.GolfBall;
 import com.kentwentyfour.project12.gameobjects.MapManager;
-import com.kentwentyfour.project12.gameobjects.movableobjects.MovableObjects;
 import com.kentwentyfour.project12.physicsengine.CoordinatesPath;
 import com.kentwentyfour.project12.physicsengine.PhysicsEngine;
 import javafx.application.Platform;
@@ -19,10 +23,10 @@ import java.io.FileWriter;
 import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.List;
 import java.util.Optional;
 import java.util.ResourceBundle;import javafx.animation.KeyFrame;
 import javafx.animation.Timeline;
-import javafx.scene.layout.VBox;
 import javafx.stage.Stage;
 import javafx.util.Duration;
 import javafx.scene.control.ButtonType;
@@ -33,6 +37,7 @@ public class SettingsController implements Initializable {
 
     @FXML
     public Label turnCounter;
+
     @FXML
     private Label xVelocity;
     @FXML
@@ -46,8 +51,13 @@ public class SettingsController implements Initializable {
     // all variables
     private  String selectedLevel;
     private int turnCount=1;
+    private int  multipleBotTurnsCounter = 0;
+
+    boolean multipleBotTurns = false;
     private double startX;
     private double startY;
+    private double targetX;
+    private double targetY;
     private MapManager mapManager;
     private PhysicsEngine physicsEngine;
     private ArrayList<GolfBall> balls;
@@ -58,7 +68,8 @@ public class SettingsController implements Initializable {
 
     @Override
     public void initialize(URL location, ResourceBundle resources) {
-        botChooseBox.getItems().addAll("BasicBot","AdvancedBot","BotHillClimbingImproved" );
+
+        botChooseBox.getItems().addAll("Basic Bot","HillClimbing Bot","Maze bot" );
         vy.valueProperty().addListener(new ChangeListener<Number>() {
             @Override
             public void changed(ObservableValue<? extends Number> observableValue, Number oldValue, Number newValue) {
@@ -88,6 +99,7 @@ public class SettingsController implements Initializable {
         turnCounter.setText("Turn: "+turnCount++);
 
     }
+
     private void handleStop(String condition, double[][] path) {
         Timeline timeline = new Timeline(new KeyFrame(Duration.seconds(2), event -> {
             if ("outside_of_playable_area".equals(condition)) {
@@ -99,18 +111,21 @@ public class SettingsController implements Initializable {
                             if (firstBall != null) {
                                 firstBall.setPosition(startX, startY);
                                 mapManager.updateCoordinates(firstBall);
+
                                 turnCount=1;
                                 turnCounter.setText("Turn: "+turnCount);
+                                multipleBotTurnsCounter = 0;
+                                multipleBotTurns =false;
                             }
                         } else if (result.get() == BUTTON_CONTINUE) {
                             GolfBall ball = balls.get(0);
                             ball.setPosition(ball.getX(), ball.getY());
                             mapManager.updateCoordinates(ball);
-
                         }
                     }
                 });
             } else if ("ball_in_the_hole".equals(condition)) {
+                multipleBotTurns =false;
                 Platform.runLater(() -> {
                     Optional<ButtonType> result = showWinPopup();
                     if (result.isPresent()) {
@@ -119,13 +134,16 @@ public class SettingsController implements Initializable {
                             if (firstBall != null) {
                                 firstBall.setPosition(startX, startY);
                                 mapManager.updateCoordinates(firstBall);
+
                                 turnCount=1;
                                 turnCounter.setText("Turn: "+turnCount);
+                                multipleBotTurnsCounter = 0;
                             }
                         } else if (result.get() == BUTTON_END_GAME) {
                             Platform.runLater(() -> {
                                 Stage stage = (Stage) vx.getScene().getWindow();
                                 stage.close();
+
                             });
                         }
                     }
@@ -142,6 +160,8 @@ public class SettingsController implements Initializable {
                                 turnCount=1;
                                 turnCounter.setText("Turn: "+turnCount);
                             }
+                            multipleBotTurnsCounter = 0;
+                            multipleBotTurns =false;
                         } else if (result.get() == BUTTON_CONTINUE) {
                             GolfBall ball = balls.get(0);
                             //sets ball position to last valid coordinates
@@ -151,12 +171,19 @@ public class SettingsController implements Initializable {
                                 ball.setPosition(path[0][0], path[1][0]);
                             }
                             mapManager.updateCoordinates(ball);
-
                         }
                     }
                 });
             }
+
+
+
+
         }));
+        if(multipleBotTurns){
+            multipleBotTurnsCounter++;
+            BotMoveMultipleTurns(multipleBotTurnsCounter);
+        }
         timeline.play();
     }
     private Optional<ButtonType> showGameOverPopup() {
@@ -185,11 +212,15 @@ public class SettingsController implements Initializable {
         return alert.showAndWait();
     }
 
-    public void setInitialValues( double startX, double startY,  MapManager mapManager, PhysicsEngine physicsEngine, ArrayList<GolfBall> balls, String selectedLevel) {
+    public void setInitialValues( double startX, double startY,  MapManager mapManager, PhysicsEngine physicsEngine, ArrayList<GolfBall> balls,double targetX,double targetY, String selectedLevel) {
         // Set the selected game mode
         // Set the initial positions and properties of the objects
         this.startX = startX;
         this.startY = startY;
+
+        this.targetX = targetX;
+        this.targetY = targetY;
+
         this.selectedLevel = selectedLevel;
 
         // Set the map manager and physics engine
@@ -199,6 +230,36 @@ public class SettingsController implements Initializable {
         // Set the list of golf balls
         this.balls = balls;
     }
+    public void  BotMoveMultipleTurns(int multipleBotTurnsCounter){
+        MultipleTurnBot botMT = (MultipleTurnBot) bot;
+
+        if(multipleBotTurnsCounter+1<botMT.getCurrentWaypointPath().size()) {
+            double waypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).x;
+            double waypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).y;
+
+            double nextWaypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter + 1).x;
+            double nextWaypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter + 1).y;
+
+            GolfBall ball = balls.getFirst();
+            double ballCoordX = ball.getX();
+            double ballCoordY = ball.getY();
+
+            // checks if the ball landed at waypoint
+            if (!(waypointCoordX == ballCoordX && waypointCoordY == ballCoordY)) {
+                botMT.genereteWaypointPath(targetX, targetY);
+                nextWaypointCoordX = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).x;
+                nextWaypointCoordY = botMT.getCurrentWaypointPath().get(multipleBotTurnsCounter).y;
+            }
+            CoordinatesPath coordinatesPath = botMT.calculatePath(ball, nextWaypointCoordX, nextWaypointCoordY);
+            mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
+            String stopping = coordinatesPath.getStoppingCondition();
+            multipleBotTurns = true;
+            handleStop(stopping, coordinatesPath.getPath());
+        }
+        else{
+            System.err.println("the full path has not been generated");
+        }
+    }
     public void BotMove() {
         String selectedBot = (String) botChooseBox.getSelectionModel().getSelectedItem();
 
@@ -207,18 +268,34 @@ public class SettingsController implements Initializable {
                 return;
             }
 
+            boolean multipleTurns =false;
             switch (selectedBot) {
-                case "BotHillClimbingImproved" -> bot = new BotHillClimbingImproved();
-                case "BasicBot" -> bot = new BasicBot();
-                case "AdvancedBot" -> bot = new BotHillClimbing();
-                default -> bot = new BotHillClimbingImproved();
+                case "Basic Bot" -> bot = new BasicBot();
+                case "Maze bot" -> {
+                    bot = new MazeBot();
+                    multipleTurns = true;
+                }
+                case "HillClimbing" -> bot = new BotHillClimbing();
+                default -> bot = new BotHillClimbing();
             }
+            if(multipleTurns){
+                MultipleTurnBot botMT = (MultipleTurnBot) bot;
+                botMT.genereteWaypointPath(targetX,targetY);
+                CoordinatesPath coordinatesPath = botMT.calculatePath(balls.getFirst(),botMT.getCurrentWaypointPath().getFirst().x, botMT.getCurrentWaypointPath().getFirst().y);
+                mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
+                String stopping = coordinatesPath.getStoppingCondition();
+                //exportExperimentData(bot,coordinatesPath,selectedLevel);
+                multipleBotTurns = true;
+                handleStop(stopping, coordinatesPath.getPath());
 
-            CoordinatesPath coordinatesPath = bot.calculatePath(balls.get(0));
-            mapManager.animateMovableObject(balls.get(0), coordinatesPath);
-            String stopping = coordinatesPath.getStoppingCondition();
-            exportExperimentData(bot,coordinatesPath,selectedLevel);
-            handleStop(stopping, coordinatesPath.getPath());
+            }else{
+                CoordinatesPath coordinatesPath = bot.calculatePath(balls.getFirst(),targetX, targetY);
+                mapManager.animateMovableObject(balls.getFirst(), coordinatesPath);
+                String stopping = coordinatesPath.getStoppingCondition();
+                exportExperimentData(bot,coordinatesPath,selectedLevel);
+                multipleBotTurns = false;
+                handleStop(stopping, coordinatesPath.getPath());
+            }
         } catch (Exception e) {
             e.printStackTrace();
         }
